<resources>
    <string name="app_name">仓储管理</string>
    <string name="home">首页</string>
    <string name="personal_center">个人中心</string>
    <string name="loginout">退出登录</string>
    <string name="change_pwd">修改密码</string>
    <string name="clear">清除缓存</string>
    <string name="version">应用版本</string>
    <string name="systemSetting">系统设置</string>
    <string name="zxing">应用二维码</string>
    <string name="syn">数据同步</string>
    <string name="photo">工作相册</string>
    <string name="warehouse">仓库管理</string>
    <string name="login">登&#8195;&#8195;录</string>
    <string name="markNum">标&#32;&#32;签&#32;&#32;号：</string>
    <string name="addressWare">仓库位置：</string>

    <string name="str_scan_title">扫一扫</string>
    <string name="str_open_light">开启闪光灯</string>
    <string name="str_close_light">关闭闪光灯</string>
    <string name="str_scan_hint">取景框对准二维码/条形码, 即可自动扫描</string>
    <string name="str_editphoto_wrapper_title">手动输入</string>
    <string name="inputOrder">请输入合同号</string>
    <string name="choose_address">请选择位置</string>
    <string name="drawer_menu_camera">我的相机</string>
    <string name="drawer_menu_gallery">我的相册</string>
    <string name="drawer_menu_tools">工具</string>
    <string name="drawer_menu_favorites">我的收藏</string>
    <string name="drawer_menu_setting">设置</string>
    <string name="drawer_menu_air">天气</string>
    <string name="not_null">账号或密码不能为空</string>
    <string name="address_not_choose">未选择仓库位置</string>
    <string name="appInfo">应用信息</string>
    <string name="info_check">信息校验中</string>
    <string name="commit_data">数据提交中</string>
    <string name="by_hand">手动输入</string>
    <string name="not_accept">该任务还未被接受，无法操作</string>
    <string name="done_task">该任务已经完成，无法操作</string>
    <string name="check_net">请检查网络</string>
    <string name="text_size">字体大小</string>
    <string name="inputMarkNum">请输入标签号</string>
    <string name="poor_signal">当前网络信号较差</string>
    <string name="inputOrderName">请输入品名</string>
    <string name="inputOrderSpec">请输入规格</string>
    <string name="inputSteelGrade">请输入钢制牌号</string>
    <string name="out_line_tip">当前网络无法连接到服务器，数据将会保存在本地，之后可进行提交</string>
    <string name="inputCustomer">请输入客户名称</string>
    <string name="no_data">暂无数据</string>
    <string name="drawer_menu_group">我的班组</string>
</resources>
