<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SurfaceView
        android:id="@+id/preview_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <com.hgad.warehousemanager.zxing.view.ViewfinderView
        android:id="@+id/viewfinder_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_root_title_base"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_alignParentTop="true">

            <ImageView
                android:id="@+id/tv_left_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:src="@mipmap/back" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/str_scan_title"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btn_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@color/tran"
                android:onClick="IfOpenLight"
                android:text="@string/str_open_light"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btn_openimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:background="@color/tran"
                android:onClick="pickPictureFromAblum"
                android:text="@string/str_editphoto_wrapper_title"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
            <!--<TextView-->
            <!--android:id="@+id/tv_hand"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginRight="@dimen/common_padding"-->
            <!--android:onClick="hand"-->
            <!--android:text="@string/by_hand"-->
            <!--android:textColor="@android:color/white"-->
            <!--android:textSize="@dimen/common_text_size" />-->
        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>