<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:orientation="vertical">

    <include layout="@layout/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/common_dp">

        <LinearLayout
            android:id="@+id/ll_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/CommonTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_padding"
                android:text="标&#32;&#32;签&#32;&#32;号：" />

            <EditText
                android:id="@+id/et_markNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/inputMarkNum"
                android:padding="@dimen/common_padding"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/common_text_size" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1000" />

        <LinearLayout
            android:id="@+id/ll_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/CommonTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_padding"
                android:text="合&#32;&#32;同&#32;&#32;号：" />

            <EditText
                android:id="@+id/et_order_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/white"
                android:hint="@string/inputOrder"
                android:padding="@dimen/common_padding"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/common_text_size" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1000" />

        <LinearLayout
            android:id="@+id/ll_event_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/CommonTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_padding"
                android:text="品&#8195;&#8195;名：" />

            <EditText
                android:id="@+id/et_pro_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/white"
                android:hint="@string/inputOrderName"
                android:padding="@dimen/common_padding"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/common_text_size" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1000" />

        <LinearLayout
            android:id="@+id/ll_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/CommonTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_padding"
                android:text="货品地址：" />

            <EditText
                android:id="@+id/tv_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/white"
                android:hint="@string/choose_address"
                android:padding="@dimen/common_padding"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/common_text_size" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                style="@style/CommonTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_padding"
                android:text="客户名称：" />

            <EditText
                android:id="@+id/et_customer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/white"
                android:hint="@string/inputCustomer"
                android:padding="@dimen/common_padding"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/common_text_size" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1000" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_button_height"
            android:layout_margin="@dimen/common_padding"
            android:background="@drawable/shape_circle_state"
            android:text="查询"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>
</LinearLayout>